--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@ http://www.tooplate.com/view/2082-pure-mix
 
 	<!-- Site title
    ================================================== -->
-	<title>Pure Mix - Blog</title>
+	<title>AI Study guide</title>
 
 	<!-- Bootstrap CSS
    ================================================== -->
@@ -255,13 +255,10 @@ http://www.tooplate.com/view/2082-pure-mix
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
-				<p class="wow fadeInUp"  data-wow-delay="0.3s">Copyright © 2016 Your Company Name - Designed by Tooplate</p>
+				<p class="wow fadeInUp"  data-wow-delay="0.3s">Araceli Medina</p>
 				<ul class="social-icon wow fadeInUp"  data-wow-delay="0.6s">
 					<li><a href="#" class="fa fa-facebook"></a></li>
 					<li><a href="#" class="fa fa-twitter"></a></li>
-					<li><a href="#" class="fa fa-dribbble"></a></li>
-					<li><a href="#" class="fa fa-behance"></a></li>
-					<li><a href="#" class="fa fa-google-plus"></a></li>
 				</ul>
 			</div>
 			
