--- a/single-project.html
+++ b/single-project.html
@@ -16,7 +16,7 @@ http://www.tooplate.com/view/2082-pure-mix
 
 	<!-- Site title
    ================================================== -->
-	<title>Pure Mix - Single Project</title>
+	<title>Supervised Learning: Iris dataset</title>
 
 	<!-- Bootstrap CSS
    ================================================== -->
@@ -156,9 +156,6 @@ http://www.tooplate.com/view/2082-pure-mix
 				<ul class="social-icon wow fadeInUp"  data-wow-delay="0.6s">
 					<li><a href="#" class="fa fa-facebook"></a></li>
 					<li><a href="#" class="fa fa-twitter"></a></li>
-					<li><a href="#" class="fa fa-dribbble"></a></li>
-					<li><a href="#" class="fa fa-behance"></a></li>
-					<li><a href="#" class="fa fa-google-plus"></a></li>
 				</ul>
 			</div>
 			
