--- a/single-project.html
+++ b/single-project.html
@@ -135,7 +135,8 @@ http://www.tooplate.com/view/2082-pure-mix
 		</div>
 
 		<div class="wow fadeInUp col-md-7 col-sm-7" data-wow-delay="2.6s">
-			<p>Ut urna turpis, tempor sit amet massa vitae, pulvinar porttitor magna. Pellentesque dolor lorem, blandit ac congue non, mattis a mi. Vestibulum id accumsan neque. Aenean turpis dui, consectetur in ornare quis, sollicitudin vel mauris. Aliquam eros elit, blandit et tortor non, ornare tincidunt ante.</p>
+			<p> The famous Iris dataset:<p>
+			<p> https://colab.research.google.com/drive/1mNi_S9obg3BOfkFboWOd8dZh32PYQGnW  Ut urna turpis, tempor sit amet massa vitae, pulvinar porttitor magna. Pellentesque dolor lorem, blandit ac congue non, mattis a mi. Vestibulum id accumsan neque. Aenean turpis dui, consectetur in ornare quis, sollicitudin vel mauris. Aliquam eros elit, blandit et tortor non, ornare tincidunt ante.</p>
 			<p>Sed quis quam ullamcorper, tincidunt eros vel, malesuada purus. Mauris risus erat, faucibus in aliquam ut, posuere posuere metus. Phasellus eget sem tempus, egestas nisl dapibus, aliquet elit.</p>
 			<img src="images/portfolio-img1.jpg" class="img-responsive" alt="Single Project">
 		</div>
