--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <div class="header-bar">
-  <h1>*folio</h1>
-  <h2>simple whitespace theme</h2>
+  <h1>*AI & ML study guide</h1>
+  <h2>Useful and simple resources to learn AI & ML</h2>
   <br/>
   <hr>
   <br/>
