--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="header-bar">
-  <h1>*AI & ML study guide</h1>
+  <h1>ML study guide</h1>
   <h2>Useful and simple resources to learn AI & ML</h2>
   <br/>
   <hr>
